// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders the correct header 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    darkModeOn={false}
    location={Object {}}
    toggleDarkMode={[Function]}
    username="test-username"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="row align-items-center"
        >
          <div
            className="col-auto justify-content-start"
          >
            <withDeprecatedProps(Hyperlink)>
              <img
                alt="edX logo"
                height="30"
                src="edx-sm.png"
                width="60"
              />
            </withDeprecatedProps(Hyperlink)>
            <span
              className="badge badge-secondary beta"
            >
              Beta
            </span>
          </div>
          <div
            className="col"
          >
            <Link
              replace={false}
              to="/"
            >
              Courses
            </Link>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <withDeprecatedProps(Dropdown)>
              <DropdownButton
                className="btn-light"
              >
                test-username
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <DropdownItem
                  className={null}
                  onClick={[Function]}
                  type="button"
                >
                  Sign Out
                </DropdownItem>
              </DropdownMenu>
            </withDeprecatedProps(Dropdown)>
          </div>
        </div>
      </div>,
      "className": "site-header mb-3 py-3 border-bottom-blue",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row align-items-center"
        >
          <div
            className="col-auto justify-content-start"
          >
            <withDeprecatedProps(Hyperlink)>
              <img
                alt="edX logo"
                height="30"
                src="edx-sm.png"
                width="60"
              />
            </withDeprecatedProps(Hyperlink)>
            <span
              className="badge badge-secondary beta"
            >
              Beta
            </span>
          </div>
          <div
            className="col"
          >
            <Link
              replace={false}
              to="/"
            >
              Courses
            </Link>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <withDeprecatedProps(Dropdown)>
              <DropdownButton
                className="btn-light"
              >
                test-username
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <DropdownItem
                  className={null}
                  onClick={[Function]}
                  type="button"
                >
                  Sign Out
                </DropdownItem>
              </DropdownMenu>
            </withDeprecatedProps(Dropdown)>
          </div>
        </div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>,
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>,
            undefined,
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>,
          ],
          "className": "row align-items-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <withDeprecatedProps(Hyperlink)>
                  <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />
                </withDeprecatedProps(Hyperlink)>,
                <span
                  className="badge badge-secondary beta"
                >
                  Beta
                </span>,
              ],
              "className": "col-auto justify-content-start",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />,
                  "destination": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "edX logo",
                    "height": "30",
                    "src": "edx-sm.png",
                    "width": "60",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Beta",
                  "className": "badge badge-secondary beta",
                },
                "ref": null,
                "rendered": "Beta",
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>,
              "className": "col",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Courses",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Courses",
              "type": [Function],
            },
            "type": "div",
          },
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>,
              "className": "col-auto justify-content-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>,
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "test-username",
                    "className": "btn-light",
                  },
                  "ref": null,
                  "rendered": "test-username",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>,
                    "className": "dropdown-menu-right",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "Sign Out",
                      "className": null,
                      "onClick": [Function],
                      "type": "button",
                    },
                    "ref": null,
                    "rendered": "Sign Out",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="row align-items-center"
          >
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>
          </div>
        </div>,
        "className": "site-header mb-3 py-3 border-bottom-blue",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row align-items-center"
          >
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>
          </div>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-auto justify-content-start"
              >
                <withDeprecatedProps(Hyperlink)>
                  <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />
                </withDeprecatedProps(Hyperlink)>
                <span
                  className="badge badge-secondary beta"
                >
                  Beta
                </span>
              </div>,
              <div
                className="col"
              >
                <Link
                  replace={false}
                  to="/"
                >
                  Courses
                </Link>
              </div>,
              undefined,
              <div
                className="col-auto justify-content-end"
              >
                <withDeprecatedProps(Dropdown)>
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>
                </withDeprecatedProps(Dropdown)>
              </div>,
            ],
            "className": "row align-items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <withDeprecatedProps(Hyperlink)>
                    <img
                      alt="edX logo"
                      height="30"
                      src="edx-sm.png"
                      width="60"
                    />
                  </withDeprecatedProps(Hyperlink)>,
                  <span
                    className="badge badge-secondary beta"
                  >
                    Beta
                  </span>,
                ],
                "className": "col-auto justify-content-start",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <img
                      alt="edX logo"
                      height="30"
                      src="edx-sm.png"
                      width="60"
                    />,
                    "destination": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "edX logo",
                      "height": "30",
                      "src": "edx-sm.png",
                      "width": "60",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Beta",
                    "className": "badge badge-secondary beta",
                  },
                  "ref": null,
                  "rendered": "Beta",
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/"
                >
                  Courses
                </Link>,
                "className": "col",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Courses",
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Courses",
                "type": [Function],
              },
              "type": "div",
            },
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <withDeprecatedProps(Dropdown)>
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>
                </withDeprecatedProps(Dropdown)>,
                "className": "col-auto justify-content-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <DropdownButton
                      className="btn-light"
                    >
                      test-username
                    </DropdownButton>,
                    <DropdownMenu
                      className="dropdown-menu-right"
                    >
                      <DropdownItem
                        className={null}
                        onClick={[Function]}
                        type="button"
                      >
                        Sign Out
                      </DropdownItem>
                    </DropdownMenu>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "test-username",
                      "className": "btn-light",
                    },
                    "ref": null,
                    "rendered": "test-username",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": <DropdownItem
                        className={null}
                        onClick={[Function]}
                        type="button"
                      >
                        Sign Out
                      </DropdownItem>,
                      "className": "dropdown-menu-right",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "Sign Out",
                        "className": null,
                        "onClick": [Function],
                        "type": "button",
                      },
                      "ref": null,
                      "rendered": "Sign Out",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Header renders the header correctly when toggling is allowed, and dark mode is on 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    darkModeOn={true}
    location={
      Object {
        "search": "?bananas=1",
      }
    }
    toggleDarkMode={[Function]}
    username="test-username"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="row align-items-center"
        >
          <div
            className="col-auto justify-content-start"
          >
            <withDeprecatedProps(Hyperlink)>
              <img
                alt="edX logo"
                height="30"
                src="edx-sm.png"
                width="60"
              />
            </withDeprecatedProps(Hyperlink)>
            <span
              className="badge badge-secondary beta"
            >
              Beta
            </span>
          </div>
          <div
            className="col"
          >
            <Link
              replace={false}
              to="/"
            >
              Courses
            </Link>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <button
              className="btn btn-primary"
              onClick={[Function]}
            >
              Switch to 
              light mode
            </button>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <withDeprecatedProps(Dropdown)>
              <DropdownButton
                className="btn-light"
              >
                test-username
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <DropdownItem
                  className={null}
                  onClick={[Function]}
                  type="button"
                >
                  Sign Out
                </DropdownItem>
              </DropdownMenu>
            </withDeprecatedProps(Dropdown)>
          </div>
        </div>
      </div>,
      "className": "site-header mb-3 py-3 border-bottom-blue",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row align-items-center"
        >
          <div
            className="col-auto justify-content-start"
          >
            <withDeprecatedProps(Hyperlink)>
              <img
                alt="edX logo"
                height="30"
                src="edx-sm.png"
                width="60"
              />
            </withDeprecatedProps(Hyperlink)>
            <span
              className="badge badge-secondary beta"
            >
              Beta
            </span>
          </div>
          <div
            className="col"
          >
            <Link
              replace={false}
              to="/"
            >
              Courses
            </Link>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <button
              className="btn btn-primary"
              onClick={[Function]}
            >
              Switch to 
              light mode
            </button>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <withDeprecatedProps(Dropdown)>
              <DropdownButton
                className="btn-light"
              >
                test-username
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <DropdownItem
                  className={null}
                  onClick={[Function]}
                  type="button"
                >
                  Sign Out
                </DropdownItem>
              </DropdownMenu>
            </withDeprecatedProps(Dropdown)>
          </div>
        </div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>,
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>,
            <div
              className="col-auto justify-content-end"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Switch to 
                light mode
              </button>
            </div>,
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>,
          ],
          "className": "row align-items-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <withDeprecatedProps(Hyperlink)>
                  <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />
                </withDeprecatedProps(Hyperlink)>,
                <span
                  className="badge badge-secondary beta"
                >
                  Beta
                </span>,
              ],
              "className": "col-auto justify-content-start",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />,
                  "destination": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "edX logo",
                    "height": "30",
                    "src": "edx-sm.png",
                    "width": "60",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Beta",
                  "className": "badge badge-secondary beta",
                },
                "ref": null,
                "rendered": "Beta",
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>,
              "className": "col",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Courses",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Courses",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Switch to 
                light mode
              </button>,
              "className": "col-auto justify-content-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Switch to ",
                  "light mode",
                ],
                "className": "btn btn-primary",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                "Switch to ",
                "light mode",
              ],
              "type": "button",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>,
              "className": "col-auto justify-content-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>,
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "test-username",
                    "className": "btn-light",
                  },
                  "ref": null,
                  "rendered": "test-username",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>,
                    "className": "dropdown-menu-right",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "Sign Out",
                      "className": null,
                      "onClick": [Function],
                      "type": "button",
                    },
                    "ref": null,
                    "rendered": "Sign Out",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="row align-items-center"
          >
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Switch to 
                light mode
              </button>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>
          </div>
        </div>,
        "className": "site-header mb-3 py-3 border-bottom-blue",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row align-items-center"
          >
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Switch to 
                light mode
              </button>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>
          </div>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-auto justify-content-start"
              >
                <withDeprecatedProps(Hyperlink)>
                  <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />
                </withDeprecatedProps(Hyperlink)>
                <span
                  className="badge badge-secondary beta"
                >
                  Beta
                </span>
              </div>,
              <div
                className="col"
              >
                <Link
                  replace={false}
                  to="/"
                >
                  Courses
                </Link>
              </div>,
              <div
                className="col-auto justify-content-end"
              >
                <button
                  className="btn btn-primary"
                  onClick={[Function]}
                >
                  Switch to 
                  light mode
                </button>
              </div>,
              <div
                className="col-auto justify-content-end"
              >
                <withDeprecatedProps(Dropdown)>
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>
                </withDeprecatedProps(Dropdown)>
              </div>,
            ],
            "className": "row align-items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <withDeprecatedProps(Hyperlink)>
                    <img
                      alt="edX logo"
                      height="30"
                      src="edx-sm.png"
                      width="60"
                    />
                  </withDeprecatedProps(Hyperlink)>,
                  <span
                    className="badge badge-secondary beta"
                  >
                    Beta
                  </span>,
                ],
                "className": "col-auto justify-content-start",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <img
                      alt="edX logo"
                      height="30"
                      src="edx-sm.png"
                      width="60"
                    />,
                    "destination": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "edX logo",
                      "height": "30",
                      "src": "edx-sm.png",
                      "width": "60",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Beta",
                    "className": "badge badge-secondary beta",
                  },
                  "ref": null,
                  "rendered": "Beta",
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/"
                >
                  Courses
                </Link>,
                "className": "col",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Courses",
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Courses",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="btn btn-primary"
                  onClick={[Function]}
                >
                  Switch to 
                  light mode
                </button>,
                "className": "col-auto justify-content-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Switch to ",
                    "light mode",
                  ],
                  "className": "btn btn-primary",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  "Switch to ",
                  "light mode",
                ],
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <withDeprecatedProps(Dropdown)>
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>
                </withDeprecatedProps(Dropdown)>,
                "className": "col-auto justify-content-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <DropdownButton
                      className="btn-light"
                    >
                      test-username
                    </DropdownButton>,
                    <DropdownMenu
                      className="dropdown-menu-right"
                    >
                      <DropdownItem
                        className={null}
                        onClick={[Function]}
                        type="button"
                      >
                        Sign Out
                      </DropdownItem>
                    </DropdownMenu>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "test-username",
                      "className": "btn-light",
                    },
                    "ref": null,
                    "rendered": "test-username",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": <DropdownItem
                        className={null}
                        onClick={[Function]}
                        type="button"
                      >
                        Sign Out
                      </DropdownItem>,
                      "className": "dropdown-menu-right",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "Sign Out",
                        "className": null,
                        "onClick": [Function],
                        "type": "button",
                      },
                      "ref": null,
                      "rendered": "Sign Out",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Header renders the header correctly when users pass a querystring param to allow dark mode toggling 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    darkModeOn={false}
    location={
      Object {
        "search": "?bananas=1",
      }
    }
    toggleDarkMode={[Function]}
    username="test-username"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="row align-items-center"
        >
          <div
            className="col-auto justify-content-start"
          >
            <withDeprecatedProps(Hyperlink)>
              <img
                alt="edX logo"
                height="30"
                src="edx-sm.png"
                width="60"
              />
            </withDeprecatedProps(Hyperlink)>
            <span
              className="badge badge-secondary beta"
            >
              Beta
            </span>
          </div>
          <div
            className="col"
          >
            <Link
              replace={false}
              to="/"
            >
              Courses
            </Link>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <button
              className="btn btn-primary"
              onClick={[Function]}
            >
              Switch to 
              dark mode
            </button>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <withDeprecatedProps(Dropdown)>
              <DropdownButton
                className="btn-light"
              >
                test-username
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <DropdownItem
                  className={null}
                  onClick={[Function]}
                  type="button"
                >
                  Sign Out
                </DropdownItem>
              </DropdownMenu>
            </withDeprecatedProps(Dropdown)>
          </div>
        </div>
      </div>,
      "className": "site-header mb-3 py-3 border-bottom-blue",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row align-items-center"
        >
          <div
            className="col-auto justify-content-start"
          >
            <withDeprecatedProps(Hyperlink)>
              <img
                alt="edX logo"
                height="30"
                src="edx-sm.png"
                width="60"
              />
            </withDeprecatedProps(Hyperlink)>
            <span
              className="badge badge-secondary beta"
            >
              Beta
            </span>
          </div>
          <div
            className="col"
          >
            <Link
              replace={false}
              to="/"
            >
              Courses
            </Link>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <button
              className="btn btn-primary"
              onClick={[Function]}
            >
              Switch to 
              dark mode
            </button>
          </div>
          <div
            className="col-auto justify-content-end"
          >
            <withDeprecatedProps(Dropdown)>
              <DropdownButton
                className="btn-light"
              >
                test-username
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <DropdownItem
                  className={null}
                  onClick={[Function]}
                  type="button"
                >
                  Sign Out
                </DropdownItem>
              </DropdownMenu>
            </withDeprecatedProps(Dropdown)>
          </div>
        </div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>,
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>,
            <div
              className="col-auto justify-content-end"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Switch to 
                dark mode
              </button>
            </div>,
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>,
          ],
          "className": "row align-items-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <withDeprecatedProps(Hyperlink)>
                  <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />
                </withDeprecatedProps(Hyperlink)>,
                <span
                  className="badge badge-secondary beta"
                >
                  Beta
                </span>,
              ],
              "className": "col-auto justify-content-start",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />,
                  "destination": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "edX logo",
                    "height": "30",
                    "src": "edx-sm.png",
                    "width": "60",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Beta",
                  "className": "badge badge-secondary beta",
                },
                "ref": null,
                "rendered": "Beta",
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>,
              "className": "col",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Courses",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Courses",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Switch to 
                dark mode
              </button>,
              "className": "col-auto justify-content-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Switch to ",
                  "dark mode",
                ],
                "className": "btn btn-primary",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                "Switch to ",
                "dark mode",
              ],
              "type": "button",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>,
              "className": "col-auto justify-content-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>,
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "test-username",
                    "className": "btn-light",
                  },
                  "ref": null,
                  "rendered": "test-username",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>,
                    "className": "dropdown-menu-right",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "Sign Out",
                      "className": null,
                      "onClick": [Function],
                      "type": "button",
                    },
                    "ref": null,
                    "rendered": "Sign Out",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="row align-items-center"
          >
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Switch to 
                dark mode
              </button>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>
          </div>
        </div>,
        "className": "site-header mb-3 py-3 border-bottom-blue",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row align-items-center"
          >
            <div
              className="col-auto justify-content-start"
            >
              <withDeprecatedProps(Hyperlink)>
                <img
                  alt="edX logo"
                  height="30"
                  src="edx-sm.png"
                  width="60"
                />
              </withDeprecatedProps(Hyperlink)>
              <span
                className="badge badge-secondary beta"
              >
                Beta
              </span>
            </div>
            <div
              className="col"
            >
              <Link
                replace={false}
                to="/"
              >
                Courses
              </Link>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Switch to 
                dark mode
              </button>
            </div>
            <div
              className="col-auto justify-content-end"
            >
              <withDeprecatedProps(Dropdown)>
                <DropdownButton
                  className="btn-light"
                >
                  test-username
                </DropdownButton>
                <DropdownMenu
                  className="dropdown-menu-right"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    Sign Out
                  </DropdownItem>
                </DropdownMenu>
              </withDeprecatedProps(Dropdown)>
            </div>
          </div>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-auto justify-content-start"
              >
                <withDeprecatedProps(Hyperlink)>
                  <img
                    alt="edX logo"
                    height="30"
                    src="edx-sm.png"
                    width="60"
                  />
                </withDeprecatedProps(Hyperlink)>
                <span
                  className="badge badge-secondary beta"
                >
                  Beta
                </span>
              </div>,
              <div
                className="col"
              >
                <Link
                  replace={false}
                  to="/"
                >
                  Courses
                </Link>
              </div>,
              <div
                className="col-auto justify-content-end"
              >
                <button
                  className="btn btn-primary"
                  onClick={[Function]}
                >
                  Switch to 
                  dark mode
                </button>
              </div>,
              <div
                className="col-auto justify-content-end"
              >
                <withDeprecatedProps(Dropdown)>
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>
                </withDeprecatedProps(Dropdown)>
              </div>,
            ],
            "className": "row align-items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <withDeprecatedProps(Hyperlink)>
                    <img
                      alt="edX logo"
                      height="30"
                      src="edx-sm.png"
                      width="60"
                    />
                  </withDeprecatedProps(Hyperlink)>,
                  <span
                    className="badge badge-secondary beta"
                  >
                    Beta
                  </span>,
                ],
                "className": "col-auto justify-content-start",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <img
                      alt="edX logo"
                      height="30"
                      src="edx-sm.png"
                      width="60"
                    />,
                    "destination": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "edX logo",
                      "height": "30",
                      "src": "edx-sm.png",
                      "width": "60",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Beta",
                    "className": "badge badge-secondary beta",
                  },
                  "ref": null,
                  "rendered": "Beta",
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/"
                >
                  Courses
                </Link>,
                "className": "col",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Courses",
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Courses",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="btn btn-primary"
                  onClick={[Function]}
                >
                  Switch to 
                  dark mode
                </button>,
                "className": "col-auto justify-content-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Switch to ",
                    "dark mode",
                  ],
                  "className": "btn btn-primary",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  "Switch to ",
                  "dark mode",
                ],
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <withDeprecatedProps(Dropdown)>
                  <DropdownButton
                    className="btn-light"
                  >
                    test-username
                  </DropdownButton>
                  <DropdownMenu
                    className="dropdown-menu-right"
                  >
                    <DropdownItem
                      className={null}
                      onClick={[Function]}
                      type="button"
                    >
                      Sign Out
                    </DropdownItem>
                  </DropdownMenu>
                </withDeprecatedProps(Dropdown)>,
                "className": "col-auto justify-content-end",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <DropdownButton
                      className="btn-light"
                    >
                      test-username
                    </DropdownButton>,
                    <DropdownMenu
                      className="dropdown-menu-right"
                    >
                      <DropdownItem
                        className={null}
                        onClick={[Function]}
                        type="button"
                      >
                        Sign Out
                      </DropdownItem>
                    </DropdownMenu>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "test-username",
                      "className": "btn-light",
                    },
                    "ref": null,
                    "rendered": "test-username",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": <DropdownItem
                        className={null}
                        onClick={[Function]}
                        type="button"
                      >
                        Sign Out
                      </DropdownItem>,
                      "className": "dropdown-menu-right",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "Sign Out",
                        "className": null,
                        "onClick": [Function],
                        "type": "button",
                      },
                      "ref": null,
                      "rendered": "Sign Out",
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
